src/vm/snapshots/hebi__vm__tests__add_objects.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
"a" + "b"


# Result:
Object(
    "ab",
)
