src/vm/snapshots/hebi__vm__tests__basic_fn_call.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
fn test():
  return "yo"

test()


# Result:
Ok(
    Object(
        "yo",
    ),
)
