src/vm/snapshots/hebi__vm__tests__builtin_collect_native.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
collect("a\nb\nc".lines())


# Result:
Object(
    [
        Object(
            "a",
        ),
        Object(
            "b",
        ),
        Object(
            "c",
        ),
    ],
)
