src/vm/snapshots/hebi__vm__tests__builtin_parse_int.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
print parse_int(10)
print parse_int(10.0)
print parse_int("10")


# Result:
None

# Output:
10
10
10

