src/vm/snapshots/hebi__vm__tests__builtin_str_lines_iter.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
strings := [
  "a\n\nb\nc",
  "\na\n\nb\nc",
  "\na\n\nb\nc\n",
]

for string in strings:
  for line in string.lines():
    print "`" + line + "`"
  print ""


# Result:
None

# Output:
`a`
``
`b`
`c`

``
`a`
``
`b`
`c`

``
`a`
``
`b`
`c`
``


