src/vm/snapshots/hebi__vm__tests__builtin_str_methods.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := "a\nb\nc"

print "len", v.len()
print "is_empty", v.is_empty()
print "lines", v.lines()


# Result:
None

# Output:
len 5
is_empty false
lines <str lines>

