src/vm/snapshots/hebi__vm__tests__builtin_str_methods_bound.snap
---
source: src/vm/tests.rs
expression: snapshot
---
# Source:
v := "a\nb\nc"

v_len := v.len
v_is_empty := v.is_empty
v_lines := v.lines

print "len", v_len()
print "is_empty", v_is_empty()
print "lines", v_lines()


# Result:
None

# Output:
len 5
is_empty false
lines <str lines>

